package padroesestruturais.adapter;

public interface ILeitorMidia {
    String tocar(String tipo, String nomeArquivo);
}
