package padroesestruturais.adapter;

public class ReprodutorAvancado {

    public String tocarMp4(String nomeArquivo) {
        return "Tocando MP4: " + nomeArquivo;
    }

    public String tocarVlc(String nomeArquivo) {
        return "Tocando VLC: " + nomeArquivo;
    }
}
